# algocrefi-contract

./: README.md  algocrefi-contract.code-workspace
projects/algocrefi-contract/: .algokit.toml  README.md  pyproject.toml
projects/algocrefi-contract/.algokit/: .copier-answers.yml
projects/algocrefi-contract/smart_contracts/: __main__.py
projects/algocrefi-contract/smart_contracts/algocrefi_aura/: contract.py  deploy_config.py
projects/algocrefi-contract/smart_contracts/algocrefi_lending/: contract.py  deploy_config.py
projects/algocrefi-contract/smart_contracts/algocrefi_pool/: contract.py  deploy_config.py
projects/algocrefi-contract/smart_contracts/algocrefi_vault/: contract.py  deploy_config.py
projects/algocrefi-contract/smart_contracts/artifacts/algocrefi_aura/: AlgocrefiAura.approval.puya.map  AlgocrefiAura.approval.teal  AlgocrefiAura.arc56.json  algocrefi_aura_client.py
projects/algocrefi-contract/smart_contracts/artifacts/algocrefi_lending/: AlgocrefiLending.approval.puya.map  AlgocrefiLending.approval.teal  AlgocrefiLending.arc56.json  algocrefi_lending_client.py
projects/algocrefi-contract/smart_contracts/artifacts/algocrefi_pool/: AlgoPool.approval.puya.map  AlgoPool.approval.teal  AlgoPool.arc56.json  AlgocrefiPool.approval.puya.map  AlgocrefiPool.approval.teal  AlgocrefiPool.arc56.json  algocrefi_pool_client.py
projects/algocrefi-contract/smart_contracts/artifacts/algocrefi_vault/: AlgocrefiVault.approval.puya.map  AlgocrefiVault.approval.teal  algocrefi_vault_client.py
